--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-inner-image-zoom": "^3.0.2",
     "react-router-dom": "^7.0.1",
     "swiper": "^11.1.15"
   },
