--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.48.1",
     "bootstrap": "^5.3.3",
     "embla-carousel-react": "^8.5.1",
     "react": "^18.3.1",
